kubernetes/apps/manga/manifests/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
spec:
  stripPrefix:
    prefixes:
      - /api
      - /_ipx/_/api
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: manga-ingress
  annotations:
    external-dns.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`manga.kalexlab.xyz`)
      services:
        - name: komga
          port: 25600
    - kind: Rule
      match: Host(`tranga.kalexlab.xyz`)
      services:
        - name: tranga-web
          port: 80
      middlewares:
        - name: authelia-forward-auth
          namespace: sso
    - kind: Rule
      match: "Host(`tranga.kalexlab.xyz`) && (PathPrefix(`/api/`) || PathPrefix(`/_ipx/_/api/`))"
      services:
        - name: tranga-api
          port: 6531
      middlewares:
        - name: strip-api-prefix
        - name: authelia-forward-auth
          namespace: sso
  tls:
    secretName: manga-ingress-certificate-secret
