kubernetes/apps/manga/manifests/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-cluster-dns
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: coredns
          podSelector:
            matchLabels:
              k8s-app: coredns
      ports:
        - protocol: UDP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: komga
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: manga
      kalexlab.xyz/component: komga
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: manga
              kalexlab.xyz/component: tranga-api
      ports:
        - protocol: TCP
          port: 25600
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tranga-api
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: manga
      kalexlab.xyz/component: tranga-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 6531
  egress:
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: manga
              kalexlab.xyz/component: cluster
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: manga
              kalexlab.xyz/component: komga
      ports:
        - protocol: TCP
          port: 25600
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: flaresolverr
          podSelector:
            matchLabels:
              kalexlab.xyz/app: flaresolverr
              kalexlab.xyz/component: flaresolverr
      ports:
        - protocol: TCP
          port: 8191
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tranga-web
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: manga
      kalexlab.xyz/component: tranga-web
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cluster
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: manga
      kalexlab.xyz/component: cluster
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: manga
              kalexlab.xyz/component: tranga-api
      ports:
        - protocol: TCP
          port: 5432
